# fullstack-rust-vendas

./: .env  .gitignore  docker-compose.yml  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
backend/: .env  Cargo.toml  Dockerfile  docker-compose.yml
backend/backend/migrations/: 20241008013510_create_clients_table.sql  20241008013600_update_product_price_type.sql  20241008013615_drop_orders_table.sql  20241008013640_add_foreign_key_to_sales.sql
backend/backend/ml_api/: Dockerfile  api.py  requirements.txt
backend/backend/src/: ai_service.rs  main.rs
backend/backend/src/handlers/: client_handler.rs  product_handler.rs
backend/backend/src/models/: sale.rs  schema.rs
backend/migrations/: 20241008013531_create_sales_table.sql  20241008013628_create_index_on_client_email.sql
backend/src/: main copy.rs  model
backend/src/handlers/: client_handler.rs  client_handler_copy.rs  mod_copy.rs  sale_handler.rs
backend/src/models/: client.rs  client_copy.rs  mod.rs  sale.rs
backend/src/services/: client.rs  clients.rs  mod.rs  product.rs
migrations/: 20241008013521_create_products_table.sql  20241008013531_create_sales_table.sql  20241008013549_add_email_to_clients.sql
ml_api/: requirements.txt
src/: main.rs  schema.rs
src/handlers/: sale_handler.rs
src/models/: product.rs  sale.rs  schema.rs
src/services/: clients.rs  mod.rs  product_handler.rs  product_handler_copy.rs  sales.rs
