[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-cors = "0.6"  # Verifique a versão mais recente
actix-files = "0.6"  # Verifique a versão e ajuste conforme necessário
actix-multipart = "0.5"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
postgres = "0.19.9"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
env_logger = "0.10.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "bigdecimal"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures-util = "0.3"
rust_decimal = "1.36.0"
bigdecimal = "0.4.5"

[[bin]]
name = "backend"
path = "src/main.rs"
